fix - mobile not showing icon

--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -24,7 +24,9 @@
 
       img {
         width: 40px;
+        height: 40px;
         transition:all .5s ease;
+        
       }
       img:hover{
         transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
@@ -66,6 +68,7 @@
 
 .colorModeDiv{
   animation: shake 4s infinite;
+  margin-right: 20px;
 }
 .colorMode {
   position: absolute;
